[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbl-chat-cli"
version = "0.1.0"
description = "CLI chat client for dbl-gateway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "prompt_toolkit>=3.0.43",
]

[project.scripts]
dbl-chat-cli = "dbl_chat_cli.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbl_chat_cli*"]
